Allow flex-wrap on columns and fix div closing

--- a/static/style.css
+++ b/static/style.css
@@ -346,6 +346,7 @@ a.nav-item:hover {
     display: flex;
     justify-content: space-around;
     align-items: stretch;
+    flex-wrap: wrap;
 }
 
 .column {
